--- a/minmaxArray.ipynb
+++ b/minmaxArray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "a78fce76",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "6512e294",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "b16a4081",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "b872930c",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,6 +92,7 @@
     }
    ],
    "source": [
+    "# show min value index\n",
     "np.argmin(a)"
    ]
   },
@@ -134,6 +135,7 @@
     }
    ],
    "source": [
+    "# show max value index\n",
     "np.argmax(a)"
    ]
   },
@@ -155,6 +157,7 @@
     }
    ],
    "source": [
+    "\n",
     "np.min(a,axis=1)"
    ]
   },
