--- a/numpyWork.ipynb
+++ b/numpyWork.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c1be8b6",
+   "id": "8d36f1d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cbdd85c3",
+   "id": "b81f089b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "03882508",
+   "id": "9f50990a",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2fd8b214",
+   "id": "efb44db5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "09b04474",
+   "id": "6de33ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4e340a9d",
+   "id": "c29c999f",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8fbb6408",
+   "id": "ae8f9106",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fb444868",
+   "id": "3e4dbec2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ab523d0c",
+   "id": "a13df5d0",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a591cc92",
+   "id": "c3ffd57c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "056d5e97",
+   "id": "8d7f0bf3",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "afc4ecee",
+   "id": "303c8e5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "65bc4b3e",
+   "id": "76ab7478",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b122f71c",
+   "id": "7f925924",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5d20f2ed",
+   "id": "78cc63a9",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "65ca0d94",
+   "id": "7b245e32",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bccb7a0e",
+   "id": "f718a96e",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "67ec29dc",
+   "id": "0ea3e124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f55a64ee",
+   "id": "9930aec0",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0b0d2d52",
+   "id": "b5049a61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "01a914ba",
+   "id": "d9ceb72b",
    "metadata": {},
    "outputs": [
     {
@@ -348,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "3883d9ef",
+   "execution_count": 22,
+   "id": "013417db",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "       [1, 2, 3, 4]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,8 +370,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "b6c7542b",
+   "execution_count": 23,
+   "id": "ae2eacf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,8 +380,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "78b89d6b",
+   "execution_count": 24,
+   "id": "363d5790",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,8 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "762f9f5a",
+   "execution_count": 25,
+   "id": "bb6bbda4",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "       [0, 1, 2]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,8 +427,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "2803b77b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Q10 Create blank array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2d47c09c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones((2,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cfdc815e",
+   "id": "cbd91c47",
    "metadata": {},
    "outputs": [],
    "source": []
