--- a/string.ipynb
+++ b/string.ipynb
@@ -2,27 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1565220",
+   "id": "e2077ebf",
    "metadata": {},
    "source": [
-    "### Array practice work\n",
-    "\n"
+    "##### This file contain all the string mathod."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "506c7b21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l=[1,2,3,4,5,6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "a1a3e720",
+   "execution_count": 5,
+   "id": "522746ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,24 +20,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7ec861b9",
+   "execution_count": 6,
+   "id": "3fa8cdba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=np.array(l)"
+    "s = \"hello welcome To my Project\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c8f22c7b",
+   "execution_count": 10,
+   "id": "8545f9dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3, 4, 5, 6])"
+       "array('Hello welcome to my project', dtype='<U27')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.char.capitalize(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "706db1e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('HELLO WELCOME TO MY PROJECT', dtype='<U27')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.char.upper(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5eab7463",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('hello welcome to my project', dtype='<U27')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.char.lower(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e083928a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array('Hello Welcome To My Project', dtype='<U27')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.char.title(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7ad31cc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(False)"
       ]
      },
      "execution_count": 21,
@@ -57,29 +130,40 @@
     }
    ],
    "source": [
-    "a"
+    "np.char.isalnum(s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c86a8cf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To check the dimension of array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "5952af3b",
+   "id": "1fc70789",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "array(False)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.char.isalpha(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "083c919c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(False)"
       ]
      },
      "execution_count": 23,
@@ -88,29 +172,40 @@
     }
    ],
    "source": [
-    "a.ndim\n"
+    "np.char.islower(s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2ed3e851",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To check the type of array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "2d4d1236",
+   "id": "47f91302",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
+       "array(False)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.char.istitle(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "783b8cc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(False)"
       ]
      },
      "execution_count": 25,
@@ -119,31 +214,40 @@
     }
    ],
    "source": [
-    "type(a)"
+    "np.char.isupper(s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3da7961d",
+   "id": "1bfe1039",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(False)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# To check the len of array"
+    "np.char.isnumeric(s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "db7bd313",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "10a300c4",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "array(False)"
       ]
      },
      "execution_count": 27,
@@ -152,29 +256,40 @@
     }
    ],
    "source": [
-    "len(a)"
+    "np.char.isalnum(s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d293e79f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# to check the shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "9d49f856",
+   "id": "e82dedd2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6,)"
+       "array(False)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.char.isspace(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9fd1d63f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(False)"
       ]
      },
      "execution_count": 29,
@@ -183,204 +298,13 @@
     }
    ],
    "source": [
-    "a.shape\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "37870912",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To convert the array into 2d array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "afb49737",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [4, 5, 6]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.reshape((2,3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "01cf889f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To convert array into 3d array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "520436ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[1, 2]],\n",
-       "\n",
-       "       [[3, 4]],\n",
-       "\n",
-       "       [[5, 6]]])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.reshape((3,1,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "c63ee121",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To convert array into 3d to 1d\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "e384d880",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 3, 4, 5, 6])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "11af2390",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# to calculate mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "55929d2a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "9ee65ebe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To calculate variance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "220beff1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.9166666666666665"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.var()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "c1fd0236",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To calculate standardeviation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "32544b81",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.707825127659933"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.std()"
+    "np.char.isalpha(s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62ba960c",
+   "id": "b6c89f3b",
    "metadata": {},
    "outputs": [],
    "source": []
